Removed JVM options for Alfresco Share Build